--- a/PlantIdentifier/Info.plist
+++ b/PlantIdentifier/Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs camera access to identify plants</string>
 </dict>
 </plist>
